--- a/donate.html
+++ b/donate.html
@@ -39,9 +39,9 @@
         <div class="header_bar">
             <div class="navigation_bar" align="left">
                 <a class="category" href="index.php" onfocus="this.blur();">Introduction</a>
-                <a class="category" href="library.html" onfocus="this.blur();">Library</a>
-                <a class="category" href="help.html" onfocus="this.blur();">Help</a>
+                <a class="category" href="help.html" onfocus="this.blur();">Getting started</a>
                 <a class="category" href="contact.html" onfocus="this.blur();">Contact</a>
+                <a class="category" href="library.html" onfocus="this.blur();">Library</a>
                 <a class="current_category" href="donate.html" onfocus="this.blur();">Donate</a>
             </div>
         </div>
@@ -52,7 +52,7 @@
                 <h2>Donate!</h2>
                 <h3>Reasons to donate</h3>
                 <p>
-                    I offer idiomind for free and I hope you enjoy it. Please note that I developed the editor during my spare time and that I've been working on it for more than four years by now! If idiomind is useful for you, please send me a little donation so that I can at least cover my huge coffee-bill ;)
+                    I offer idiomind for free and I hope you enjoy it. Please note that I developed the program during my spare time and that I've been working on it for more than five years by now! If idiomind is useful for you, please send me a little donation so that I can at least cover my huge coffee-bill ;)
                 </p>
                 <h3>How to donate</h3>
                 <p>
@@ -76,11 +76,13 @@
                 <p>
                     Your donation will help me to maintain and update idiomind.
                 </p>
+<!--
                 <h3>Other ways to Contribute</h3>
                 
                 <p>
                     <a href="http://sourceforge.net/projects/idiomind/">Rate idiomind and provide feedback</a> to let me and other users know about how you liked the software!"
                 </p>
+-->
             </div>
 
         </div>
