--- a/library.html
+++ b/library.html
@@ -40,9 +40,9 @@
         <div class="header_bar">
             <div class="navigation_bar" align="left">
                 <a class="category" href="index.php" onfocus="this.blur();">Introduction</a>
-                <a class="current_category" href="library.html" onfocus="this.blur();">Library</a>
-                <a class="category" href="help.html" onfocus="this.blur();">Help</a>
+                <a class="category" href="help.html" onfocus="this.blur();">Getting started</a>
                 <a class="category" href="contact.html" onfocus="this.blur();">Contact</a>
+                <a class="current_category" href="library.html" onfocus="this.blur();">Library</a>
                 <a class="category" href="donate.html" onfocus="this.blur();">Donate</a>
             </div>
         </div>
@@ -55,12 +55,15 @@
                 <div class="container">
                     <div class="row">
                         <div class="span6">
-                            <h2>Welcome to Idiomind's library</h2>
+        
                             <div class="plainInner">
                                 <p>
-                                    Please select the language you are learning to get in and find topics:
+                                    Download lists of words and sentences shared by other users.
                                 </p>
-                                <br>
+                                <p>
+                                    Please select the language you are learning, to get in and find several topics.
+                                </p>
+                   
                                 <ul class="blank">
                                     <li><a href="./english/" class="librarylink">English</a></li>
                                     <li><a href="./spanish/" class="librarylink">Spanish</a></li>
