--- a/contact.html
+++ b/contact.html
@@ -43,9 +43,9 @@
         <div class="header_bar">
             <div class="navigation_bar" align="left">
                 <a class="category" href="index.php" onfocus="this.blur();">Introduction</a>
-                <a class="category" href="library.html" onfocus="this.blur();">Library</a>
-                <a class="category" href="help.html" onfocus="this.blur();">Help</a>
+                <a class="category" href="help.html" onfocus="this.blur();">Getting started</a>
                 <a class="current_category" href="contact.html" onfocus="this.blur();">Contact</a>
+                <a class="category" href="library.html" onfocus="this.blur();">Library</a>
                 <a class="category" href="donate.html" onfocus="this.blur();">Donate</a>
             </div>
         </div>
@@ -53,7 +53,9 @@
         <div class="content_wrapper">
 
             <div class="content">
-
+                <p>
+                    Feel free to ask a question or share any comments you may have.
+                </p>
 
                 <div class="container">
 
