--- a/help.html
+++ b/help.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- saved from url=(0062)http://idiomind.sourceforge.net/index.php?category=impressum -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<html>
+<head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <meta charset="utf-8">
     <title>Help</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,7 +33,7 @@
             <img class="wrapped_logo" src="/images/logo.png" height="58px" align="left">
             <h1>Idiomind</h1>
             <p>
-                Idiomind is a small program to learn a foreign language
+                Idiomind is a small program to learn foreign language
             </p>
         </div>
         <div class="header_bar">
@@ -58,7 +58,7 @@
                 <h2>Adding notes</h2>
 
                 <p>
-                    The program allows you to save words or sentences that you find in a list called Topic.
+                    The program allows you to save words or sentences in a list called Topic.
                     You can add your own manual translations or use an online translator to do that, automatically.
                     <br><br>
                     <img width='250px' src='./images/2_4.png'> </img>
