--- a/library.html
+++ b/library.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- saved from url=(0062)http://idiomind.sourceforge.net/index.php?category=impressum -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<html>
+<head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <meta charset="utf-8">
     <title>Library</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,7 +34,7 @@
             <img class="wrapped_logo" src="/images/logo.png" height="58px" align="left">
             <h1>Idiomind</h1>
             <p>
-                Idiomind is a small program to learn a foreign language
+                Idiomind is a small program to learn foreign language
             </p>
         </div>
         <div class="header_bar">
@@ -50,7 +50,6 @@
         <div class="content_wrapper">
                     
             <div class="content">
-
 
                 <div class="container">
                     <div class="row">
@@ -96,10 +95,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
