--- a/help.html
+++ b/help.html
@@ -24,6 +24,14 @@
         ga('create', 'UA-63037434-3', 'auto');
         ga('send', 'pageview');
     </script>
+    
+        <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+    }
+    </script>
+
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 </head>
 
@@ -33,7 +41,7 @@
             <img class="wrapped_logo" src="/images/logo.png" height="58px" align="left">
             <h1>Idiomind</h1>
             <p>
-                Idiomind is a small program to learn foreign language
+                Idiomind is a small program to learn foreign language <div id="google_translate_element"></div>
             </p>
         </div>
         <div class="header_bar">
