--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
                 </h2>
                 <p><img src="/images/me.png" alt="Robin Palatnik" height="92" width="92" align="left" hspace="10" vspace="0"></img>
                     
-                    <small> My name is Robin Palatnik, I live in Argentina. I maintain the Idiomind project and I have been in it since 2015, I hope you find it useful. Of course I hope your comments or collaborations. I'm follower of the free software culture. Also, I believe education is the basis for a better world! :)
+                    <small> My name is Robin Palatnik, I live in Argentina. I maintain the Idiomind project and I have been in it since 2015, I hope you find it useful, and of course, I hope your comments or collaborations. I'm follower of the free software culture. Also, I believe education is the basis for a better world! :)
                     </small>
                 </p>
                 <br>
@@ -109,8 +109,7 @@
     <div class="footer">
         <div>
             <p>
-            <small>&copy; 2019 <a href="https://idiomind.sourceforge.io">Idiomind Project </a>
-            All the code under license GPL 3.<br><br>
+            <small>&copy; 2019 <a href="https://idiomind.sourceforge.io">Idiomind Project </a><br><br>
            
             </small>
             </p>
