--- a/help.html
+++ b/help.html
@@ -118,8 +118,7 @@
     <div class="footer">
         <div>
             <p>
-            <small>&copy; 2019 <a href="https://idiomind.sourceforge.io">Idiomind Project </a>
-            All the code under license GPL 3.<br><br>
+            <small>&copy; 2019 <a href="https://idiomind.sourceforge.io">Idiomind Project </a><br><br>
             
             </small>
             </p>
