--- a/library.html
+++ b/library.html
@@ -69,7 +69,7 @@
                                     Share what you learn with others!
                                 </h2>
                                 <p>
-                                     To get in and find topics, please select the language you are learning.
+                                     Please select the language you are learning to get in and find topics.
                                 </p>
                    
                                 <ul class="blank">
@@ -95,8 +95,7 @@
     <div class="footer">
         <div>
             <p>
-            <small>&copy; 2019 <a href="https://idiomind.sourceforge.io">Idiomind Project </a>
-            All the code under license GPL 3.<br><br>
+            <small>&copy; 2019 <a href="https://idiomind.sourceforge.io">Idiomind Project </a><br><br>
             
             </small>
             </p>
