--- a/help.html
+++ b/help.html
@@ -103,14 +103,14 @@
               
                 <img width='500px' src='./images/cron.png'> </img>
         
-                    <table cellpadding='5' style='font-size:3px; border: 1px solid #E0E0E0; border-collapse: collapse;'>
+                    <table cellpadding='5' style='border: 1px solid #E0E0E0; border-collapse: collapse;'>
                         <tr><td style='font-size:10px;'><img src='./images/newtopics.png'></img> New topics</td><td style='font-size:10px;'><img src='./images/maturetopics.png'> Mature topics</td>
-                        <td style='font-size:10px;'>0%-100% Estimated memory retention</td><td style='font-size:10px;'>6-60 Days</td></tr>
+                        <td style='font-size:10px;'>[0%-100%] Estimated memory retention</td><td style='font-size:10px;'>[6-60] Days</td></tr>
                     </table>
                 <br>
-                <ul><li>
+                <p>
                     Icons legend according to reviews:
-                </ul></li>
+                </p>
                 <table cellpadding='5' border='0' style="font-size: 12;">
                     <tr><td><img width='20px' src='./images/img.1.png'></img> new</td><td><img width='20px' src='./images/img.2.png'></img> mature</td><td><img width='20px' src='./images/img.3.png'></img> learnt</td></tr>
                     <tr><td><img width='20px' src='./images/img.5.png'></img> reviewing</td><td><img width='20px' src='./images/img.7.png'></img> to review</td><td><img width='20px' src='./images/img.9.png'></img> to review, second notice</td></tr>
