--- a/librarym.html
+++ b/librarym.html
@@ -51,10 +51,10 @@
         
                             <div class="plainInner">
                                 <h3>
-                                    Share what you learn with others!
+                                    Topic library
                                 </h3>
                                 <p>
-                                   Please select the language you are learning to get in and find topics.
+                                   Please select language you are learning to enter and view various topics by categories.
                                 </p>
                    
                                 <ul class="blank">
