--- a/contact.html
+++ b/contact.html
@@ -93,12 +93,13 @@
                 </div>
                 
                 <h2>
-                    About Me
+                    About
                 </h2>
                 <p><img src="/images/me.png" alt="Robin Palatnik" height="92" width="92" align="left" hspace="10" vspace="0"></img>
-                    
-                    <small> My name is Robin Palatnik, I live in Argentina. I maintain the Idiomind project and I have been in it since 2015, I hope you find it useful, and of course, I hope your comments or collaborations. I'm follower of the free software culture. Also, I believe education is the basis for a better world! :)
+                    <p width="70%">
+                    <small> My name is Robin Palatnik, I live in Argentina. I maintain the Idiomind project, I have been in it since 2015, I hope you find it useful, and of course, I hope your comments or collaborations. I'm follower of the free software culture. Also, I believe education is the basis for a better world! :)
                     </small>
+                    </p>
                 </p>
                 <br>
                 <br>
