--- a/contactm.html
+++ b/contactm.html
@@ -90,7 +90,7 @@
                     About
                 </h3>
                 <p><img src="/images/me.png" alt="Robin Palatnik" height="92" width="92" align="left" hspace="10" vspace="0"></img>
-                    <small> My name is Robin Palatnik, I live in Argentina. I maintain the Idiomind project, I have been in it since 2015, I hope you find it useful, and of course, I hope your comments or collaborations. I'm follower of the free software culture. Also, I believe education is the basis for a better world! :)
+                    <small> My name is Robin Palatnik, I live in Argentina. I maintain the Idiomind project, I have been in it since 2015, I hope you find it useful, and of course, I hope your comments or collaborations. I'm follower of the free software culture. As well, I believe education is the basis for a better world! :)
                     </small>
                 </p>
                
