--- a/helpm.html
+++ b/helpm.html
@@ -49,7 +49,7 @@
             </p>
 -->
             
-            <p>This information gives you a short overview on how to use Idiomind.</p>
+            <p>This page gives you a short overview on how to use Idiomind.</p>
                 <br>
                 <h3>Definitions</h3>
                 <p>
