--- a/library.html
+++ b/library.html
@@ -69,9 +69,10 @@
                                     Topic library
                                 </h2>
                                 <p>
-                                     Please select language you are learning to enter and view various topics by categories.
+                                     Visit our growing library to find a curated selection of topics shared by users.<br>
+                                     Please select the language you are learning:
                                 </p>
-                   
+                                <br>
                                 <ul class="blank">
                                     <li><a href="./english/" target="_blank" class="librarylink">English</a></li>
                                     <li><a href="./spanish/" target="_blank" class="librarylink">Spanish</a></li>
