--- a/librarym.html
+++ b/librarym.html
@@ -56,7 +56,8 @@
                                     Topic library
                                 </h3>
                                 <p>
-                                   Please select language you are learning to enter and view various topics by categories.
+                                    Visit our growing library to find a curated selection of topics shared by users.
+                                    Please select the language you are learning:
                                 </p>
                                 <br>
                                 <ul class="blank">
