--- a/library.html
+++ b/library.html
@@ -87,6 +87,8 @@
                                 </ul>
                                 <br>
                                 <br>
+                                
+                                <p>Note: the library is a work in progress, still with holes and place holders.<br></p>
                             </div>
                         </div>
                     </div>
