--- a/librarym.html
+++ b/librarym.html
@@ -56,7 +56,7 @@
                                     Topic library
                                 </h3>
                                 <p>
-                                    Visit our growing library to find a curated selection of topics shared by users.
+                                    Visit our growing library to find a curated selection of topics shared by users.<br>
                                     Please select the language you are learning:
                                 </p>
                                 <br>
@@ -73,6 +73,8 @@
                                     <li>Vietnamese</li><br>
                                 </ul>
                             </div>
+
+                            <p>Note: the library is a work in progress, still with holes and place holders.<br></p>
 
             </div>
         </div>
