--- a/library.html
+++ b/library.html
@@ -69,7 +69,7 @@
                                     Topic library
                                 </h2>
                                 <p>
-                                     Visit our growing library to find a curated selection of topics shared by users.<br>
+                                     Visit the library to find a curated selection of topics shared by users.<br>
                                      Please select the language you are learning:
                                 </p>
                           
