--- a/library.html
+++ b/library.html
@@ -40,10 +40,10 @@
  
     <div class="wrapper">
         <div class="logo_bar">
-            <img class="wrapped_logo" src="/images/logo_trans.png" height="58px" align="left">
+            <img class="wrapped_logo" src="/images/logo.png" height="58px" align="left">
             <h1>Idiomind</h1>
             <p>
-                Idiomind is a program based in Bash scripts to learn foreign languages
+                Idiomind can help you learn a new language
             </p>
         </div>
         <div class="header_bar">
@@ -53,6 +53,7 @@
                 <a class="current_category" href="library.html" onfocus="this.blur();">Library</a>
                 <a class="category" href="./news?page=1" onfocus="this.blur();">News</a>
                 <a class="category" href="contact.html" onfocus="this.blur();">Contact</a>
+                <a class="category" href="donate.html" onfocus="this.blur();">Donate</a>
             </div>
         </div>
 
@@ -70,7 +71,7 @@
                                 </h2>
                                 <p>
                                      Visit the library to find a curated selection of topics shared by users.<br>
-                                     Please select the language you are learning:
+                                     Please select the language you are learning:<br><br>
                                 </p>
                           
                                 <ul class="blank">
