--- a/donate.html
+++ b/donate.html
@@ -52,7 +52,7 @@
                 <a class="category" href="library.html" onfocus="this.blur();">Library</a>
                 <a class="category" href="/news?page=1" onfocus="this.blur();">News</a>
                 <a class="category" href="contact.html" onfocus="this.blur();">Contact</a>
-                <a class="current_category" href="donate.html" onfocus="this.blur();">Donate</a>
+       
             </div>
         </div>
 
@@ -83,10 +83,7 @@
 					<p>
 					Your donation will help me to maintain and update idiomind.
 					</p>
-					<h3>Other ways to Contribute</h3>
-					<p>
-					<a href="http://sourceforge.net/projects/idiomind/">Rate idiomind</a> to let me and other users know about how you liked the software!"
-					</p>			</div>
+								</div>
 
 
                         </span>
