--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,9 @@
             <img class="wrapped_logo" src="/images/logo.png" height="58px" align="left">
             <h1>Idiomind</h1>
             <p>
-                Idiomind is a valuable tool for language learners seeking to enhance their language skills.
+                Idiomind is a valuable tool for language learners seeking to enhance their language skills
             </p>
+            <div style="text-align: right;font-size: 1.0em;"><a href="/donate.html">Donate</a></div>
         </div>
         
         <div class="header_bar">
@@ -54,7 +55,6 @@
                 <a class="category" href="library.html" onfocus="this.blur();">Library</a>
                 <a class="category" href="/news?page=1" onfocus="this.blur();">News</a>
                 <a class="current_category" href="contact.html" onfocus="this.blur();">Contact</a>
-                <a class="category" href="donate.html" onfocus="this.blur();">Donate</a>
             </div>
         </div>
 
