--- a/helpm.html
+++ b/helpm.html
@@ -49,7 +49,7 @@
             <p>
                Idiomind is a valuable tool for language learners seeking to enhance their language skills.
            </p>
-			<p><a href="/donatem.html">Donate</a></p><br>
+		   <div style="text-align: right;font-size: 1.0em;"><a href="/donatem.html">Donate</a></div><br><br>
             
             <h3>Getting Started with Idiomind</h3><br>
                
