--- a/librarym.html
+++ b/librarym.html
@@ -43,7 +43,7 @@
     
                 <h1><a href="/mobile.php">Idiomind</a></h1>
                 <p>Idiomind is a valuable tool for language learners seeking to enhance their language skills.</p>
-                <p><a href="/donatem.html">Donate</a></p><br>
+                <div style="text-align: right;font-size: 1.0em;"><a href="/donatem.html">Donate</a></div><br><br>
 <!--
             <p>
                 Idiomind is a program based in Bash scripts to learn foreign languages
