--- a/donate.html
+++ b/donate.html
@@ -41,7 +41,7 @@
             <img class="wrapped_logo" src="/images/logo.png" height="58px" align="left">
             <h1>Idiomind</h1>
             <p>
-                Idiomind is a valuable tool for language learners seeking to enhance their language skills.
+                Idiomind is a tool for language learners seeking to enhance their language skills
             </p>
         </div>
         
@@ -79,7 +79,7 @@
 					</form>
 
 					</p>
-					<h3>Thank you!</h3>
+					<h4>Thank you!</h4>
 					<p>
 					Your donation will help me to maintain and update idiomind.
 					</p>
