--- a/library.html
+++ b/library.html
@@ -43,9 +43,9 @@
             <img class="wrapped_logo" src="/images/logo.png" height="58px" align="left">
             <h1>Idiomind</h1>
             <p>
-                Idiomind is a valuable tool for language learners seeking to enhance their language skills
+                Idiomind is a tool for language learners seeking to enhance their language skills
             </p>
-            <div style="text-align: right;font-size: 1.0em;"><a href="/donate.html">Donate</a></div>
+            <div style="opacity: 0.60; font-weight: bold; font-family: system-ui; text-align: right;font-size: 0.9em;"><a href="/donate.html">Donate</a></div>
         </div>
         <div class="header_bar">
             <div class="navigation_bar" align="left">
