--- a/librarym.html
+++ b/librarym.html
@@ -42,7 +42,7 @@
             <div class="span6">
     
                 <h1><a href="/mobile.php">Idiomind</a></h1>
-                <p>Idiomind is a valuable tool for language learners seeking to enhance their language skills.</p>
+                <p>Idiomind is a tool for language learners seeking to enhance their language skills.</p>
                 <div style="text-align: right;font-size: 1.0em;"><a href="/donatem.html">Donate</a></div><br><br>
 <!--
             <p>
