--- a/helpm.html
+++ b/helpm.html
@@ -47,7 +47,7 @@
             
 
             <p>
-               Idiomind is a valuable tool for language learners seeking to enhance their language skills.
+               Idiomind is a tool for language learners seeking to enhance their language skills.
            </p>
 		   <div style="text-align: right;font-size: 1.0em;"><a href="/donatem.html">Donate</a></div><br><br>
             
